# events-pairing

./: .pre-commit-config.yaml  LICENSE  README.md  grid_search.py  main.py  models.py  plots.py  pyproject.toml  utils.py  validation.py
.github/: ci.yml
.github/workflows/: ci.yml
src/events_pairing/: grid_search.py  main.py  paths.py  utils.py  validation.py
